--- a/package.json
+++ b/package.json
@@ -37,8 +37,12 @@
     "@arcjet/next": "^1.0.0-beta.15",
     "@clerk/localizations": "^3.29.0",
     "@clerk/nextjs": "^6.36.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.2",
     "@logtape/logtape": "^1.2.2",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "@sentry/nextjs": "^10.28.0",
     "@supabase/supabase-js": "^2.89.0",
     "@t3-oss/env-nextjs": "^0.13.8",
