--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@clerk/nextjs": "^6.36.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "@logtape/logtape": "^1.2.2",
     "@mui/icons-material": "^7.3.6",
@@ -46,18 +47,24 @@
     "@sentry/nextjs": "^10.28.0",
     "@supabase/supabase-js": "^2.89.0",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "ai": "^6.0.7",
     "drizzle-orm": "^0.44.7",
-    "framer-motion": "^12.23.26",
+    "framer-motion": "^12.24.12",
     "lucide-react": "^0.562.0",
     "next": "^16.0.10",
     "next-intl": "^4.5.8",
+    "openai": "^6.15.0",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "posthog-js": "^1.300.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.67.0",
-    "zod": "^4.1.13"
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
+    "sweetalert2": "^11.26.17",
+    "sweetalert2-react-content": "^5.1.1",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.3.0",
